--- a/glushkovizer/doc/formal.tex
+++ b/glushkovizer/doc/formal.tex
@@ -17,7 +17,8 @@
 \nocite{*} 
 \usetikzlibrary{positioning}
 \usetikzlibrary{arrows.meta}
-\usetikzlibrary{automata, arrows}
+\usetikzlibrary{automata} 
+\usetikzlibrary{arrows}
 \usetikzlibrary{shapes.geometric}
 \usetikzlibrary{calc}
 
