--- a/glushkovizer/doc/glushkov.tex
+++ b/glushkovizer/doc/glushkov.tex
@@ -11,7 +11,7 @@ Nous appliquerons cet algorithme à l'aide la fonction \(glushkov\) qui a donc
 pour signature~:
 
 \[
-    glushkov: Exp(\Sigma) \to M(\Sigma, \mathbb{N})
+    glushkov: Exp(\Sigma) \to AFN(\Sigma, \mathbb{N})
 \]
 
 Et a ainsi, on peut définir cette fonction de cette façon~:
